# kitsu

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.ci.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env  .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0016_add_pg_trgm_index_for_anime_title.py  0017_add_core_user_fields.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/v1/: health.py  router.py
backend/app/core/: __init__.py  logging.py  settings.py
backend/app/crud/: anime.py  refresh_token.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/errors/: handlers.py  types.py
backend/app/middlewares/: request_context.py
backend/app/models/: user.py
backend/app/repositories/: user_repository.py
backend/app/routers/: auth.py
backend/app/schemas/: common.py  user.py
backend/app/tests/: conftest.py  test_health.py  test_settings_smoke.py
backend/app/utils/: security.py
backend/tests/: conftest.py  test_smoke.py
docs/: compatibility-map-backend.md
docs/archive/: glowing-enchanting-teapot.md
frontend/: .env  .env.production  package-lock.json  package.json
frontend/__tests__/: smoke.test.ts
frontend/lib/: auth-errors.ts
frontend/mappers/: anime.mapper.ts
