[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitsu-backend"
version = "0.1.0"
description = "FastAPI backend rewrite for Kitsu"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.115.5,<1.0.0",
  "uvicorn[standard]>=0.32.0,<0.33.0",
  "python-multipart>=0.0.18,<0.1.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "httpx>=0.27.0,<0.28.0",

  # Database
  "sqlalchemy[asyncio]>=2.0.36,<2.1.0",
  "alembic>=1.13.2,<2.0.0",
  "asyncpg>=0.29.0,<1.0.0",

  # Validation / config
  "pydantic>=2.9,<3.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "email-validator>=2.2.0,<3.0.0",

  # Auth
  "bcrypt==4.0.1",
  "passlib[bcrypt]==1.7.4",
  "PyJWT>=2.9.0,<3.0.0",

  # Redis for distributed coordination
  "redis[hiredis]>=5.0.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.8.4,<1.0.0",
  "mypy>=1.14.1,<2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:asyncpg",
]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

